--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    Hello Coursera! This is a great course!
+    Hello Coursera! This is great!
 </body>
 </html>
