--- a/site/trials/lecture06/semantic-elements.html
+++ b/site/trials/lecture06/semantic-elements.html
@@ -14,17 +14,17 @@
         </header>
         <h1>Main Heading of the page (hard not to have it)</h1>
         <section>
-            Section 1
-            <article>Article 1</article>
-            <article>Article 2</article>
-            <article>Article 3</article>
+            <h2>Section 1</h2>
+            <article><h3>Article 1</h3></article>
+            <article><h3>Article 2</h3></article>
+            <article><h3>Article 3</h3></article>
         </section>
         <section>
-            Section 2
-            <article>Article 4</article>
-            <article>Article 5</article>
-            <article>Article 6</article>
-            <dic>Regular DIV element</dic>
+            <h2>Section 2</h2>
+            <article><h3>Article 4</h3></article>
+            <article><h3>Article 5</h3></article>
+            <article><h3>Article 6</h3></article>
+            <div>Regular DIV element</div>
         </section>
         <aside>
             ASIDE - some information that relates to the main topic,
