--- a/site/trials/CSS/lecture19/box-model.html
+++ b/site/trials/CSS/lecture19/box-model.html
@@ -17,10 +17,12 @@
 
         #box {
             background-color: blue;
-            padding: 10px 30px 10px 30px;
-            border: 20px solid black;
+            padding: 10px;
+            border: 5px solid black;
             width: 300px;
             margin-top: 50px;
+            height: 40px;
+            overflow: auto;
         }
 
         #content {
@@ -37,7 +39,12 @@
 <body>
     <h1>Box Model</h1>
     <div id="box">
-        <div id="content">Some text in the box...</div>
+        <div id="content">Some text in the box...
+            Some text in the box...
+            Some text in the box...
+            Some text in the box...
+            Some text in the box...
+        </div>
     </div>
 </body>
 
