--- a/site/trials/CSS/lecture22/positioning.html
+++ b/site/trials/CSS/lecture22/positioning.html
@@ -17,6 +17,8 @@
 
         div#container {
             background-color: #00FFFF;
+            position: relative; /* h3 should find nearest parent with absolute or relative position */
+            top: 60px; /*to check that all entire elements go with div*/
         }
 
         P {
@@ -39,6 +41,9 @@
 
         #p3 {
             background-color: #5F9EA0;
+            position: absolute;
+            top: 0px;
+            left: 0px;
         }
 
         #p4 {
