--- a/site/trials/CSS/lecture25/index.html
+++ b/site/trials/CSS/lecture25/index.html
@@ -7,10 +7,33 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Bootstrap Starter Page</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-sm-6">Col 1</div>
+            <div class="col-md-4 col-sm-6">Col 2</div>
+            <div class="col-md-4 col-sm-6">Col 3</div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-sm-6">Col 1</div>
+            <div class="col-md-4 col-sm-6">Col 2</div>
+            <div class="col-md-4 col-sm-6">Col 3</div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6">Col 1</div>
+            <div class="col-6">Col 2</div>
+            <div class="col-6">Col 3</div>
+        </div>
+    </div>
 </body>
 
 </html>
